2003-03-05  Geert Stappers  <stappers@stappers.nl>

	* Makefile.am

	Gnome libraries are designed for DATADIR/pixmaps/PACKAGE_NAME,
	not DATADIR/PACKAGE_NAME/pixmaps

2003-02-19  Geert Stappers  <stappers@stappers.nl>

	* ilogo100.xpm

	New file, with the new logo. It is a blow-up of ../src/ilogo.c

	* conglomerate-icon-16.png & conglomerate-icon-32.png

	Fresh generated from ilogo100.xpm
	(saved as ilogo100.png in Gimp, resized with convert from imagemagick)

2003-10-16  David Malcolm <david@davemalcolm.demon.co.uk>

	* Makefile.am, cong-caution-48.png, cong-important-48.png, cong-note-48.png, cong-tip-48.png, cong-warning-48.png

	Icons for DocBook admonition tags, by <jimmac@ximian.com>
	taken from http://jimmac.musichall.cz/i.php3?ikony=83

2003-10-11  Geert Stappers  <stappers@stappers.nl>

	* Makefile.am
	Use pkgdatadir instead of datadir.

2003-09-24  David Hoover <karma@deadmoose.com>

	* conglomerate-icon-32.png

	Larger, transparent version of the conglomerate icon
2003-09-09  Geert Stappers <stappers@stappers.nl>

	* Makefile.am
	Splitting desktop and application icons

	* README
	telling about http://bugzilla.gnome.org/show_bug.cgi?id=121676

2003-06-27  Geert Stappers <Geert.Stappers@xs4all.nl>

	* conglomerate-icon-16.png
	It now has the (converted) content of ../src/ilogo.c
	http://bugzilla.gnome.org/show_bug.cgi?id=115930 is updated.

2003-06-26  Geert Stappers <Geert.Stappers@xs4all.nl>

	* Makefile.am
	Remove ChangeLog from the EXTRA_DIST, it goes by default in the
	tarbal. Now the ChangeLog wouldn't be installed.

2003-06-25  Geert Stappers <Geert.Stappers@xs4all.nl>

	* Makefile.am

	Added conglomerate-icon-16.png.
	Please update bugzilla #115930 when you change the image

2003-06-25  Geert Stappers <Geert.Stappers@xs4all.nl>

	* Makefile.am

	Created this ChangeLog, a place to tell about "pixmaps"
